--- a/CustomerList/Shared/NavMenu.razor
+++ b/CustomerList/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-people" aria-hidden="true"></span> Client
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/TaskList">
+                <span class="oi oi-check" aria-hidden="true"></span> Task
+            </NavLink>
+        </li>
     </ul>
 </div>
 
